--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,19 +11,19 @@ on:
 
 jobs:
   test-ubuntu:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 11.0.4
+          java-version: 21
           architecture: x64
 
       - uses: er28-0652/setup-ghidra@master
         with:
-          version: "9.1.2"
+          version: "12.0.0"
       
       - name: install 32bit libs
         run: |
@@ -67,7 +67,7 @@ jobs:
 
       - uses: er28-0652/setup-ghidra@master
         with:
-          version: "9.1.2"
+          version: "12.0.0"
 
       - uses: actions/setup-python@v2
         with:
@@ -101,7 +101,7 @@ jobs:
       - uses: NextLight/setup-ghidra@octokit-auth
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          version: "9.1.2"
+          version: "12.0.0"
 
       - uses: actions/setup-python@v2
         with:
