--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: 21
-          architecture: x64
+          java-version: '21'
+          distribution: 'temurin'
 
       - uses: er28-0652/setup-ghidra@master
         with:
@@ -59,11 +59,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          java-version: 11.0.4
-          architecture: x64
+          java-version: '21'
+          distribution: 'temurin'
 
       - uses: er28-0652/setup-ghidra@master
         with:
@@ -92,11 +92,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          java-version: 11.0.4
-          architecture: x64
+          java-version: '21'
+          distribution: 'temurin'
 
       - uses: NextLight/setup-ghidra@octokit-auth
         with:
